--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -3,6 +3,7 @@
 
     <color name="background_color">#2DBE60</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <color name="transparent">#00000000</color>
 
 </resources>
