--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -5,5 +5,6 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="transparent">#00000000</color>
+    <color name="gray">#BABABA</color>
 
 </resources>
