--- a/res/layout/allnote_fragment.xml
+++ b/res/layout/allnote_fragment.xml
@@ -2,12 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    
-    <ListView
-        android:id="@+id/id_listview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
-    
-    <include layout="@layout/arcmenu_layout"/>"
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/id_swipe_ly"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <ListView
+            android:id="@+id/id_listview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <include layout="@layout/arcmenu_layout" />
 
 </RelativeLayout>
