--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -15,25 +15,25 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="NoteItemLay">
-        <item name="android:layout_width">220dp</item>
-        <item name="android:layout_height">80dp</item>
-    </style>
-
     <style name="NoteImage">
         <item name="android:layout_width">50dp</item>
         <item name="android:layout_height">50dp</item>
     </style>
+    
+    <style name="NoteItem">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">100dp</item>
+    </style>
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
