--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -24,6 +24,11 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">100dp</item>
     </style>
+    
+    <style name="BookItem">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">80dp</item>
+    </style>
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
